# siglip2-embedder

./: README.md  config.yaml  main.py  pyproject.toml
